--- a/e-emploi-backend/src/main/resources/application.properties
+++ b/e-emploi-backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url= jdbc:mysql://localhost:3307/e-emploi-db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url= jdbc:mysql://localhost:3306/e-emploi-db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = create-drop
