--- a/e-emploi-frontend/package.json
+++ b/e-emploi-frontend/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@headlessui/react": "^1.7.11",
+    "@headlessui/react": "^1.7.12",
+    "@heroicons/react": "^1.0.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
