--- a/e-emploi-frontend/package.json
+++ b/e-emploi-frontend/package.json
@@ -14,7 +14,9 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-avatar-edit": "^1.2.0",
     "react-dom": "^18.2.0",
+    "react-loading": "^2.0.3",
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
