--- a/e-emploi-backend/src/main/resources/application.properties
+++ b/e-emploi-backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = create-drop
 ## Hibernate Logging
 logging.level.org.hibernate.SQL= DEBUG
 
