--- a/e-emploi-frontend/package.json
+++ b/e-emploi-frontend/package.json
@@ -19,6 +19,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-avatar-edit": "^1.2.0",
+    "react-chat-widget": "^3.1.4",
     "react-dom": "^18.2.0",
     "react-loading": "^2.0.3",
     "react-router": "^6.8.1",
