--- a/e-emploi-frontend/package.json
+++ b/e-emploi-frontend/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.7",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "net": "^1.0.2",
     "react": "^18.2.0",
     "react-avatar-edit": "^1.2.0",
     "react-chat-widget": "^3.1.4",
@@ -25,7 +26,10 @@
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "sockjs-client": "^1.6.1",
     "sort-by": "^1.2.0",
+    "stompjs": "^2.3.3",
+    "tls": "^0.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
