--- a/e-emploi-frontend/package.json
+++ b/e-emploi-frontend/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "@babel/core": "^7.16.0",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.12",
     "@heroicons/react": "^1.0.6",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "^5.16.5",
