--- a/e-emploi-frontend/package.json
+++ b/e-emploi-frontend/package.json
@@ -11,6 +11,7 @@
     "@heroicons/react": "^1.0.6",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
+    "@mui/x-data-grid": "^6.6.0",
     "@mui/x-date-pickers": "^6.4.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@svgr/webpack": "^5.5.0",
